@@ -3,6 +3,8 @@ package cz.augi.gradle.dockerjava
 import org.gradle.api.DefaultTask
 import org.gradle.api.JavaVersion
 import org.gradle.api.tasks.Input
+import org.gradle.api.tasks.InputDirectory
+import org.gradle.api.tasks.InputFile
 import org.gradle.api.tasks.Internal
 import org.gradle.api.tasks.Nested
 import org.gradle.api.tasks.Optional
@@ -11,6 +13,7 @@ import org.gradle.api.tasks.application.CreateStartScripts
 
 import java.nio.file.Files
 import java.nio.file.Path
+import java.nio.file.Paths
 import java.nio.file.StandardCopyOption
 import java.time.Clock
 
@@ -27,11 +30,11 @@ class DistDockerTask extends DefaultTask {
     @Nested
     DistDockerSettings settings
 
-    def createDockerfile(File workDir, String tarFileName, String tarRootDirectory, CreateStartScripts startScripts) {
+    def createDockerfile(File workDir, String unpackedDistributionDir, String applicationJarFilename, CreateStartScripts startScripts) {
         def dockerFile = new File(workDir, 'Dockerfile')
         dockerFile.delete()
         if (dockerExecutor.getDockerPlatform().toLowerCase().contains('win')) {
-            dockerFile << 'FROM ' + (settings.baseImage ?: getWindowsBaseImage()) + '\n'
+            dockerFile << 'FROM ' + settings.baseImage + '\n'
             dockerFile << 'SHELL ["cmd", "/S", "/C"]\n'
             if (settings.ports.any()) {
                 dockerFile << 'EXPOSE ' + settings.ports.join(' ') + '\n'
@@ -39,81 +42,50 @@ class DistDockerTask extends DefaultTask {
             settings.volumes.each { dockerFile << "VOLUME $it\n" }
             dockerFile << 'LABEL ' + getLabels().collect { "\"${it.key}\"=\"${it.value}\"" }.join(' ') + '\n'
             settings.dockerfileLines.each { dockerFile << it + '\n' }
-            dockerFile << "ADD $tarFileName C:\n"
-            dockerFile << "WORKDIR C:\\\\$tarRootDirectory\\\\bin\n"
+            dockerFile << "COPY $unpackedDistributionDir C:\n"
+            dockerFile << "COPY $applicationJarFilename C:\\\\lib\n"
+            dockerFile << "WORKDIR C:\\\\bin\n"
             dockerFile << "ENTRYPOINT ${startScripts.windowsScript.name} ${settings.arguments.join(' ')}"
         } else {
-            dockerFile << 'FROM ' + (settings.baseImage ?: getLinuxBaseImage()) + '\n'
+            dockerFile << 'FROM ' + settings.baseImage + '\n'
             if (settings.ports.any()) {
                 dockerFile << 'EXPOSE ' + settings.ports.join(' ') + '\n'
             }
             settings.volumes.each { dockerFile << "VOLUME $it\n" }
             dockerFile << 'LABEL ' + getLabels().collect { "\"${it.key}\"=\"${it.value}\"" }.join(' ') + '\n'
             settings.dockerfileLines.each { dockerFile << it + '\n' }
-            dockerFile << "ADD $tarFileName /var\n"
-            dockerFile << "WORKDIR /var/$tarRootDirectory/bin\n"
-            if (settings.javaVersion == JavaVersion.VERSION_1_8) {
-                dockerFile << 'ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap $JAVA_OPTS"\n'
-            }
+            dockerFile << "COPY $unpackedDistributionDir /var/app\n"
+            dockerFile << "COPY $applicationJarFilename /var/app/lib\n"
+            dockerFile << "WORKDIR /var/app/bin\n"
             dockerFile << "ENTRYPOINT [\"./${startScripts.unixScript.name}\"${settings.arguments.collect { ",\"$it\"" }.join('')}]"
         }
     }
 
-    private String getWindowsBaseImage() {
-        switch (settings.javaVersion) {
-            case JavaVersion.VERSION_1_8:
-                'openjdk:8u212-jre-windowsservercore-ltsc2016'
-                break
-            case JavaVersion.VERSION_1_9:
-            case JavaVersion.VERSION_1_10:
-            case JavaVersion.VERSION_11:
-                'openjdk:11.0.3-windowsservercore-ltsc2016'
-                break
-            case JavaVersion.VERSION_12:
-                'openjdk:12.0.1-windowsservercore-ltsc2016'
-                break
-            case JavaVersion.VERSION_HIGHER:
-                'openjdk:13-ea-22-windowsservercore-ltsc2016'
-                break
-            default:
-                throw new RuntimeException("Java version ${settings.javaVersion} is not supported")
-        }
-    }
-
-    private String getLinuxBaseImage() {
-        switch (settings.javaVersion) {
-            case JavaVersion.VERSION_1_8:
-                'openjdk:8u212-jre-slim'
-                break
-            case JavaVersion.VERSION_1_9:
-            case JavaVersion.VERSION_1_10:
-            case JavaVersion.VERSION_11:
-                'openjdk:11.0.3-jre-slim'
-                break
-            case JavaVersion.VERSION_12:
-            case JavaVersion.VERSION_HIGHER:
-                'openjdk:13-ea-19-alpine'
-                break
-            default:
-                throw new RuntimeException("Java version ${settings.javaVersion} is not supported")
-        }
-    }
-
     private Map<String, String> getLabels() {
+        def url = getUrl()
+        def vcsUrl = getVcsUrl()
+        def vcsRef = getVcsRef()
+
+        // https://label-schema.org/
         def labels = ['org.label-schema.schema-version':'1.0']
         labels.put('org.label-schema.build-date', Clock.systemUTC().instant().toString())
         labels.put('org.label-schema.version', project.version.toString())
         labels.put('org.label-schema.name', project.name)
-        if (project.description) {
-            labels.put('org.label-schema.description', project.description)
-        }
-        def url = getUrl()
+        if (project.description) labels.put('org.label-schema.description', project.description)
         if (url) labels.put('org.label-schema.url', url)
-        def vcsUrl = getVcsUrl()
         if (vcsUrl) labels.put('org.label-schema.vcs-url', vcsUrl)
-        def vcsRef = getVcsRef()
         if (vcsRef) labels.put('org.label-schema.vcs-ref', vcsRef)
         labels.put('org.label-schema.docker.cmd', "docker run -d ${settings.ports.collect { "-p $it:$it" }.join(' ')} ${settings.volumes.collect { "-v $it:$it" }.join(' ')} ${settings.image}")
+
+        // https://github.com/opencontainers/image-spec/blob/main/annotations.md
+        labels.put('org.opencontainers.image.created', Clock.systemUTC().instant().toString())
+        labels.put('org.opencontainers.image.version', project.version.toString())
+        labels.put('org.opencontainers.image.title', project.name)
+        if (project.description) labels.put('org.opencontainers.image.description', project.description)
+        if (url) labels.put('org.opencontainers.image.url', url)
+        if (vcsUrl) labels.put('org.opencontainers.image.source', vcsUrl)
+        if (vcsRef) labels.put('org.opencontainers.image.revision', vcsRef)
+
         labels.putAll(settings.labels)
         labels
     }
@@ -165,20 +137,26 @@ class DistDockerTask extends DefaultTask {
             settings.alternativeImages.each { args.addAll(['-t', it]) }
             args.addAll(['--file', settings.customDockerfile.name])
             settings.buildArgs.each { args.addAll(['--build-arg', it]) }
+            args.addAll(settings.dockerBuildArgs)
             args.add(workDir.toFile().absolutePath)
             dockerExecutor.execute(*args)
         } else {
-            def tarFile = new File(workDir.toFile(), 'dist.tar')
-
-            File sourceTar = settings.project.tasks.distTar.archivePath
-            Files.copy(sourceTar.toPath(), tarFile.toPath(), StandardCopyOption.REPLACE_EXISTING)
-
+            File sourceTar = project.tasks.distTar.archivePath
             String tarRootDirectory = sourceTar.name.substring(0, sourceTar.name.lastIndexOf('.'))
-            CreateStartScripts startScripts = project.tasks.startScripts
-            createDockerfile(workDir.toFile(), tarFile.name, tarRootDirectory, startScripts)
+            project.copy {
+                it.from(project.tarTree(sourceTar))
+                it.into workDir
+            }
+            String applicationJarFilename = project.tasks.jar.archiveFileName.get()
+            Path applicationJarSourcePath = Paths.get(workDir.toAbsolutePath().toString(), tarRootDirectory, 'lib', applicationJarFilename)
+            Path applicationJarTargetPath = Paths.get(workDir.toAbsolutePath().toString(), applicationJarFilename)
+            Files.move(applicationJarSourcePath, applicationJarTargetPath, StandardCopyOption.REPLACE_EXISTING)
 
+            CreateStartScripts startScripts = project.tasks.startScripts
+            createDockerfile(workDir.toFile(), tarRootDirectory, applicationJarFilename, startScripts)
             def args = ['build', '-t', settings.image]
             settings.alternativeImages.each { args.addAll(['-t', it]) }
+            args.addAll(settings.dockerBuildArgs)
             args.add(workDir.toFile().absolutePath)
             dockerExecutor.execute(*args)
         }
@@ -190,8 +168,6 @@ interface DistDockerSettings {
     String getImage()
     @Input @Optional
     String[] getAlternativeImages()
-    @Input @Optional
-    JavaVersion getJavaVersion()
     @Input @Optional
     String getBaseImage()
     @Input @Optional
@@ -205,10 +181,12 @@ interface DistDockerSettings {
     @Input @Optional
     String[] getArguments()
     @Input @Optional
+    String[] getDockerBuildArgs()
+    @InputDirectory @Optional
     File getDockerBuildDirectory()
     @Input @Optional
     File[] getFilesToCopy()
-    @Input @Optional
+    @InputFile @Optional
     File getCustomDockerfile()
     @Input @Optional
     String[] getBuildArgs()
